--- a/_quarto.yml
+++ b/_quarto.yml
@@ -48,9 +48,24 @@ website:
           - text: 1/
             href: In-class_Ex/In-class_Ex01/In-class_Ex01.html
           - text: 2/
-            href: In-class_Ex/In-class_Ex06/In-class_Ex02.html  
-
-
+            href: In-class_Ex/In-class_Ex02/In-class_Ex02.html  
+          - text: 3/
+            href: In-class_Ex/In-class_Ex03/In-class_Ex03.html    
+          - text: 4/
+            href: In-class_Ex/In-class_Ex04/In-class_Ex04.html
+          - text: 5/
+            href: In-class_Ex/In-class_Ex05/In-class_Ex05.html 
+          - text: 6/
+            href: In-class_Ex/In-class_Ex06/In-class_Ex06.html  
+          - text: 7/
+            href: In-class_Ex/In-class_Ex07/In-class_Ex07.html              
+          - text: 8/
+            href: In-class_Ex/In-class_Ex08/In-class_Ex08.html  
+          - text: 9/
+            href: In-class_Ex/In-class_Ex09/In-class_Ex09.html  
+          - text: 10/
+            href: In-class_Ex/In-class_Ex10/In-class_Ex10.html  
+            
       - text: "Take-home Exercises"
         menu: 
           - text: 1/
